src/tests/fail/type_chain_id.ml
open SCaml
    
let main (param : unit) (storage : unit) = 
  [], assert (None = if true then None else Some (Chain_id "NetXdQprcVkpaWU"))

